background rules passed to <body> and fixed horizontal scroll thing

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 .App {
   text-align: center;
-  background-image: url(./images/background.jpg);
-  background-size: cover;
-  background-attachment: fixed;
 }
 
 .App-logo {
